[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-sepay-shop"
version = "0.1.0"
description = "Telegram digital-goods shop with SePay deposits"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.20,<4",
  "asyncpg>=0.30,<1",
  "cryptography>=48.0.1,<49",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "itsdangerous>=2.2,<3",
  "jinja2>=3.1,<4",
  "pydantic-settings>=2.8,<3",
  "python-multipart>=0.0.20,<1",
  "redis>=5.2,<7",
  "sqlalchemy[asyncio]>=2.0.38,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21,<1",
  "pytest>=8.3,<9",
  "ruff>=0.11,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
